--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -58,7 +58,7 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 fastify
 
 # Copy built application from builder
-COPY --from=builder --chown=fastify:nodejs /app/dist/api ./
+COPY --from=builder --chown=fastify:nodejs /app/api/dist ./
 COPY --from=builder --chown=fastify:nodejs /app/node_modules ./node_modules
 
 # Switch to non-root user
