--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,39 +66,24 @@ services:
     container_name: email-whatsapp-localstack
     restart: unless-stopped
     ports:
-      # Main LocalStack gateway
       - '4566:4566'
-      # Edge port (deprecated but some tools still use it)
       - '4571:4571'
     environment:
-      # AWS services to enable
       SERVICES: s3,sqs,secretsmanager,ses
-      # Debugging and development settings
       DEBUG: 1
-      DATA_DIR: /tmp/localstack/data
-      # Persistence across restarts
+      # REMOVED: DATA_DIR (This caused the crash)
       PERSISTENCE: 1
-      # Docker host for Lambda functions (if needed)
       DOCKER_HOST: unix:///var/run/docker.sock
     volumes:
-      # Persist LocalStack data
-      - localstack_data:/tmp/localstack
-      # Allow LocalStack to spawn containers (for Lambda)
+      # CHANGED: Mount to /var/lib/localstack instead of /tmp/localstack
+      - localstack_data:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
-      # Init scripts for setting up S3 buckets, etc.
       - ./scripts/localstack-init.sh:/etc/localstack/init/ready.d/init.sh
     healthcheck:
-      test:
-        [
-          'CMD',
-          'curl',
-          '-f',
-          'http://localhost:4566/_localstack/health',
-        ]
+      test: ['CMD', 'curl', '-f', 'http://localhost:4566/_localstack/health']
       interval: 10s
       timeout: 5s
       retries: 5
-
   ##
   # Backend API - Fastify Server
   #
@@ -119,7 +104,7 @@ services:
       - '3000:3000'
     environment:
       # Node environment
-      NODE_ENV: development
+      NODE_ENV: production
 
       # Database connection
       DATABASE_URL: postgresql://devuser:devpassword@postgres:5432/email_whatsapp_bridge
@@ -153,7 +138,6 @@ services:
         condition: service_healthy
       localstack:
         condition: service_healthy
-    command: npm run dev
 
   ##
   # Frontend - Next.js Application
@@ -175,7 +159,7 @@ services:
       - '4200:4200'
     environment:
       # Next.js configuration
-      NODE_ENV: development
+      NODE_ENV: production
       NEXT_PUBLIC_API_URL: http://localhost:3000/api
       NEXT_TELEMETRY_DISABLED: 1
     volumes:
@@ -184,7 +168,6 @@ services:
       - ./libs/shared/src:/app/libs/shared/src
     depends_on:
       - api
-    command: npm run dev
 
 ##
 # Named volumes for data persistence
