--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-      "start:frontend": "next start apps/frontend"
-    },
+    "start:frontend": "next start apps/frontend"
+  },
   "private": true,
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
+    "@fastify/cookie": "^11.0.2",
     "@fastify/postgres": "^6.0.2",
     "@fastify/sensible": "~6.0.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.2",
     "class-variance-authority": "^0.7.1",
@@ -20,10 +23,12 @@
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
     "next": "~16.0.1",
+    "next-auth": "^4.24.13",
     "pg": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +78,7 @@
     "nx": "22.3.3",
     "postcss": "^8.5.6",
     "prettier": "~3.6.2",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
