Add OpenAI service for email analysis

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,12 @@ TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
 
 # ======================
+# OpenAI Configuration
+# ======================
+# Get this from https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# ======================
 # Database Configuration
 # ======================
 # PostgreSQL connection string
