--- a/api/package.json
+++ b/api/package.json
@@ -109,6 +109,7 @@
     "@fastify/sensible": "~6.0.2",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
-    "googleapis": "^170.1.0"
+    "googleapis": "^170.1.0",
+    "openai": "^6.16.0"
   }
 }
