--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.562.0",
     "next": "~16.0.1",
     "next-auth": "^4.24.13",
+    "openai": "^6.16.0",
     "pg": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,7 +33,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.11.2"
+    "twilio": "^5.11.2",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
