--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,10 +1,5 @@
 {
   "name": "@email-whatsapp-bridge/frontend",
   "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "next": "~16.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  }
+  "private": true
 }
