--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.11.2",
     "zod": "^4.3.5"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "next": "$next",
+    "react-redux": "$react-redux"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
