--- a/api/package.json
+++ b/api/package.json
@@ -107,6 +107,7 @@
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
     "@fastify/sensible": "~6.0.2",
+    "cron-parser": "^5.5.0",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
     "googleapis": "^170.1.0",
