--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@email-whatsapp-bridge/frontend",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "node server.js",
+    "dev:next": "next dev -p 4200 -H 127.0.0.1"
+  }
 }
