--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
     "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.2.0",
     "@fastify/postgres": "^6.0.2",
     "@fastify/sensible": "~6.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -28,7 +29,9 @@
     "pg": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "rss-parser": "^3.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
