--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
+    "framer-motion": "^11.18.2",
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
     "next": "~16.0.1",
