added user dashboard and trello changes

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,17 @@ TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
 
 # ======================
+# Trello Configuration
+# ======================
+# Get these from https://trello.com/app-key
+# 1. Visit the link and copy your API Key
+# 2. Click "Token" to generate a token (authorize the app)
+# 3. Use the list ID from a Trello board list URL (e.g. .../board_id/list_id)
+
+TRELLO_API_KEY=your-trello-api-key
+TRELLO_TOKEN=your-trello-token
+
+# ======================
 # OpenAI Configuration
 # ======================
 # Get this from https://platform.openai.com/api-keys
