Refactor: remove localstack, add nginx, and switch to Anthropic AI, add backend testing

--- a/.env.example
+++ b/.env.example
@@ -82,20 +82,10 @@ DATABASE_URL=postgresql://devuser:devpassword@localhost:5432/email_whatsapp_brid
 JWT_SECRET=change-this-to-a-random-secret-key-at-least-32-characters-long
 
 # ======================
-# AWS Configuration
+# AI Provider (Anthropic / Claude)
 # ======================
-# For local development, we use LocalStack
-# For production, set USE_LOCALSTACK=false and provide real AWS credentials
-
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=test
-AWS_SECRET_ACCESS_KEY=test
-USE_LOCALSTACK=true
-AWS_ENDPOINT_URL=http://localhost:4566
-
-# Production AWS credentials (only needed when deploying)
-# AWS_ACCESS_KEY_ID=your-real-access-key
-# AWS_SECRET_ACCESS_KEY=your-real-secret-key
+# Get your API key from https://console.anthropic.com/
+ANTHROPIC_API_KEY=your-anthropic-api-key
 
 # ======================
 # Application Settings
