--- a/api/package.json
+++ b/api/package.json
@@ -101,6 +101,10 @@
           "build",
           "prune"
         ]
+      },
+      "test": {
+        "inputs": ["default", "{workspaceRoot}/jest.preset.js"],
+        "outputs": ["{workspaceRoot}/coverage/api"]
       }
     }
   },
@@ -111,6 +115,7 @@
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
     "googleapis": "^170.1.0",
-    "openai": "^6.16.0"
+    "@anthropic-ai/sdk": "^0.32.1",
+    "node-cron": "^3.0.3"
   }
 }
