--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@
 #
 # This file orchestrates all services needed for local development:
 # 1. PostgreSQL - Database for storing emails, users, and messages
-# 2. LocalStack - Local AWS cloud stack for testing S3, SQS, etc.
-# 3. Backend API - Fastify server handling Gmail and Twilio integrations
-# 4. Frontend - Next.js web application
+# 2. Backend API - Fastify server handling Gmail and Twilio integrations
+# 3. Frontend - Next.js web application
+# 4. Nginx - Reverse proxy (single entrypoint on port 80)
 #
 # Usage:
 #   Start all services: docker-compose up
@@ -53,38 +53,6 @@ services:
       retries: 5
 
   ##
-  # LocalStack - Local AWS Cloud
-  #
-  # Provides local versions of AWS services:
-  # - S3: Store email attachments
-  # - SQS: Queue for async email processing
-  # - SES: Test email sending (optional)
-  # - Secrets Manager: Store API keys securely
-  ##
-  localstack:
-    image: localstack/localstack:latest
-    container_name: email-whatsapp-localstack
-    restart: unless-stopped
-    ports:
-      - '4566:4566'
-      - '4571:4571'
-    environment:
-      SERVICES: s3,sqs,secretsmanager,ses
-      DEBUG: 1
-      # REMOVED: DATA_DIR (This caused the crash)
-      PERSISTENCE: 1
-      DOCKER_HOST: unix:///var/run/docker.sock
-    volumes:
-      # CHANGED: Mount to /var/lib/localstack instead of /tmp/localstack
-      - localstack_data:/var/lib/localstack
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./scripts/localstack-init.sh:/etc/localstack/init/ready.d/init.sh
-    healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:4566/_localstack/health']
-      interval: 10s
-      timeout: 5s
-      retries: 5
-  ##
   # Backend API - Fastify Server
   #
   # Node.js server that:
@@ -99,9 +67,6 @@ services:
       dockerfile: ./api/Dockerfile
     container_name: email-whatsapp-api
     restart: unless-stopped
-    ports:
-      # Expose API on localhost:3000
-      - '3000:3000'
     environment:
       # Node environment
       NODE_ENV: production
@@ -119,13 +84,6 @@ services:
       TWILIO_AUTH_TOKEN: ${TWILIO_AUTH_TOKEN}
       TWILIO_WHATSAPP_NUMBER: ${TWILIO_WHATSAPP_NUMBER}
 
-      # AWS / LocalStack configuration
-      AWS_REGION: us-east-1
-      AWS_ACCESS_KEY_ID: test
-      AWS_SECRET_ACCESS_KEY: test
-      AWS_ENDPOINT_URL: http://localstack:4566
-      USE_LOCALSTACK: 'true'
-
       # Application settings
       JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
       API_PORT: 3000
@@ -135,8 +93,6 @@ services:
       - ./libs/shared/src:/app/libs/shared/src
     depends_on:
       postgres:
-        condition: service_healthy
-      localstack:
         condition: service_healthy
 
   ##
@@ -154,13 +110,10 @@ services:
       dockerfile: ./apps/frontend/Dockerfile
     container_name: email-whatsapp-frontend
     restart: unless-stopped
-    ports:
-      # Expose Next.js on localhost:4200
-      - '4200:4200'
     environment:
-      # Next.js configuration
+      # Next.js configuration (API URL via Nginx when using docker-compose)
       NODE_ENV: production
-      NEXT_PUBLIC_API_URL: http://localhost:3000/api
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost/api}
       NEXT_TELEMETRY_DISABLED: 1
     volumes:
       # Mount source code for hot reloading
@@ -168,6 +121,23 @@ services:
       - ./libs/shared/src:/app/libs/shared/src
     depends_on:
       - api
+
+  ##
+  # Nginx - Reverse proxy
+  #
+  # Single entrypoint for API and frontend on port 80.
+  ##
+  nginx:
+    image: nginx:alpine
+    container_name: email-whatsapp-nginx
+    restart: unless-stopped
+    ports:
+      - '80:80'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+      - frontend
 
 ##
 # Named volumes for data persistence
@@ -177,8 +147,6 @@ services:
 ##
 volumes:
   postgres_data:
-    driver: local
-  localstack_data:
     driver: local
 
 ##
