--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "framer-motion": "^11.18.2",
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
+    "node-cron": "^3.0.3",
     "next": "~16.0.1",
     "next-auth": "^4.24.13",
-    "openai": "^6.16.0",
+    "@anthropic-ai/sdk": "^0.32.1",
     "pg": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
