fix: Vercel build – use default .next, fix tsconfig rootDir, add frontend build script and Vercel docs

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -29,11 +29,10 @@
     "src/**/*.tsx",
     "src/**/*.js",
     "src/**/*.jsx",
-    "../../apps/frontend/.next/types/**/*.ts",
-    "../../dist/apps/frontend/.next/types/**/*.ts",
-    "next-env.d.ts", 
-    "next-auth.d.ts" ,
-    ".next/types/**/*.ts" ],
+    ".next/types/**/*.ts",
+    "next-env.d.ts",
+    "next-auth.d.ts"
+  ],
   "exclude": [
     "out-tsc",
     "dist",
