--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "build": "next build",
     "dev": "node server.js",
     "dev:next": "next dev -p 4200 -H 127.0.0.1"
   }
