feat: add application v1 with dashboard, PostHog analytics, and AI improvements
- Add dashboard with email inbox integration
- Add PostHog analytics tracking for CTA clicks
- Update AI service and email routes
- Add agent documentation (AGENTS.md, CLAUDE.md)
- Update Docker and infrastructure configs

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 # If you use http://localhost:4200 in the browser, set NEXTAUTH_URL=http://localhost:4200
 NEXTAUTH_URL=http://localhost:4200
 # Secret for signing session cookies. Generate: openssl rand -base64 32
-NEXTAUTH_SECRET=your-nextauth-secret-at-least-32-chars
+NEXTAUTH_SECRET='97Q7yOQLNL2kvbRYzY70ZyodEu5cWHNKuUFRnkW2Sbg='
 
 # ======================
 # Gmail API / Google OAuth (for NextAuth "Sign in with Google")
@@ -28,8 +28,8 @@ NEXTAUTH_SECRET=your-nextauth-secret-at-least-32-chars
 #   - http://127.0.0.1:4200/api/auth/callback/google   (add if you open the app via 127.0.0.1)
 # The redirect URI is built from NEXTAUTH_URL + /api/auth/callback/google
 
-GMAIL_CLIENT_ID=your-gmail-client-id.apps.googleusercontent.com
-GMAIL_CLIENT_SECRET=your-gmail-client-secret
+GMAIL_CLIENT_ID=client_id
+GMAIL_CLIENT_SECRET=google_secret
 GMAIL_REDIRECT_URI=http://localhost:4200/api/auth/callback/google
 
 # ======================
@@ -79,7 +79,7 @@ DATABASE_URL=postgresql://devuser:devpassword@localhost:5432/email_whatsapp_brid
 # Generate a strong random string (at least 32 characters)
 # You can generate one with: openssl rand -base64 32
 
-JWT_SECRET=change-this-to-a-random-secret-key-at-least-32-characters-long
+JWT_SECRET='secret'
 
 # ======================
 # AI Provider (Anthropic / Claude)
@@ -102,3 +102,6 @@ FRONTEND_URL=http://localhost:4200
 
 # Next.js public API URL (exposed to browser)
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
+
+NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key
+NEXT_PUBLIC_POSTHOG_HOST=posthog_url
