--- a/api/tsconfig.app.json
+++ b/api/tsconfig.app.json
@@ -9,7 +9,7 @@
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": ["src/**/*.ts"],
-  "exclude": [],
+  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts"],
   "references": [
     {
       "path": "../libs/shared/tsconfig.lib.json"
