--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,5 +6,8 @@
     "build": "next build",
     "dev": "node server.js",
     "dev:next": "next dev -p 4200 -H 127.0.0.1"
+  },
+  "dependencies": {
+    "posthog-js": "^1.336.4"
   }
 }
