--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@testing-library/react": "16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.9",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.23",
