--- a/api/tsconfig.app.json
+++ b/api/tsconfig.app.json
@@ -8,7 +8,7 @@
     "moduleResolution": "nodenext",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts"],
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts"],
   "references": [
     {
