--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.562.0",
     "node-cron": "^3.0.3",
     "next": "~16.0.1",
+    "posthog-js": "^1.336.4",
     "next-auth": "^4.24.13",
     "@anthropic-ai/sdk": "^0.32.1",
     "pg": "^8.17.1",
