--- a/.env.example
+++ b/.env.example
@@ -105,3 +105,21 @@ NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
 NEXT_PUBLIC_POSTHOG_KEY=your_posthog_key
 NEXT_PUBLIC_POSTHOG_HOST=posthog_url
+
+# ======================
+# Dynamic Trend Blog / SEO (optional)
+# ======================
+# NewsAPI (free tier: 100 req/day) – https://newsapi.org
+NEWS_API_KEY=
+# Reddit API (free) – for trend discovery
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+
+# Feature flags (start false, enable after validation)
+ENABLE_DYNAMIC_KEYWORDS=false
+ENABLE_AUTO_INTERNAL_LINKING=false
+ENABLE_CONTENT_REFRESH=false
+
+# Config
+MIN_KEYWORD_RELEVANCE_SCORE=0.6
+MAX_ACTIVE_KEYWORDS=50
