--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 # Reverse proxy for Email-WhatsApp Bridge (single VPS)
-# Routes /api to Fastify backend, everything else to Next.js frontend
+# Routes /api/auth to Next.js (NextAuth), /api to Fastify backend, everything else to Next.js frontend
+# For TLS later: add listen 443 ssl; and ssl_certificate / ssl_certificate_key
 
 upstream api {
     server api:3000;
@@ -9,11 +10,50 @@ upstream frontend {
     server frontend:4200;
 }
 
+# Shared proxy headers including WebSocket support
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 80;
+    # listen 443 ssl;
+    # ssl_certificate /etc/nginx/ssl/cert.pem;
+    # ssl_certificate_key /etc/nginx/ssl/key.pem;
     server_name localhost;
 
-    # API (Fastify)
+    # Next.js API routes (NextAuth, /api/hello, etc.) — must be more specific than /api
+    location /api/auth {
+        proxy_pass http://frontend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # Optional: other Next.js API routes (e.g. /api/hello)
+    location /api/hello {
+        proxy_pass http://frontend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # Backend REST API (Fastify)
     location /api {
         proxy_pass http://api;
         proxy_http_version 1.1;
@@ -21,12 +61,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
 
-    # Frontend (Next.js)
+    # Frontend (Next.js: /, /_next/*, static, etc.)
     location / {
         proxy_pass http://frontend;
         proxy_http_version 1.1;
@@ -34,6 +76,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
