--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,8 @@ services:
       POSTGRES_PASSWORD: devpassword
       # Performance tuning for development
       POSTGRES_INITDB_ARGS: '-E UTF8 --locale=en_US.UTF-8'
-    ports:
-      # Expose PostgreSQL on localhost:5432
-      - '5432:5432'
+    # Ports: not exposed by default (access only via api/frontend containers).
+    # For local DB access (e.g. Prisma Studio), temporarily add: - '5432:5432'
     volumes:
       # Persist database data across container restarts
       - postgres_data:/var/lib/postgresql/data
@@ -112,8 +111,7 @@ services:
         DATABASE_URL: ${DATABASE_URL:-postgresql://devuser:devpassword@postgres:5432/email_whatsapp_bridge}
     container_name: email-whatsapp-frontend
     restart: unless-stopped
-    ports:
-      - '4200:4200'
+    # No host port: frontend is reached only via Nginx on port 80
     environment:
       # Next.js configuration (API URL via Nginx when using docker-compose)
       NODE_ENV: production
@@ -135,6 +133,7 @@ services:
     restart: unless-stopped
     ports:
       - '80:80'
+      # - '443:443'  # Uncomment when TLS is configured (certificates, nginx.conf)
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
