--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,12 +113,18 @@ services:
     restart: unless-stopped
     # No host port: frontend is reached only via Nginx on port 80
     environment:
-      # Next.js configuration (API URL via Nginx when using docker-compose)
       NODE_ENV: production
+      # Required at runtime for NextAuth + Prisma adapter
+      DATABASE_URL: ${DATABASE_URL:-postgresql://devuser:devpassword@postgres:5432/email_whatsapp_bridge}
+      # Next.js configuration (API URL via Nginx when using docker-compose)
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost/api}
       NEXT_TELEMETRY_DISABLED: 1
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost}
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       NEXT_PUBLIC_POSTHOG_KEY: ${NEXT_PUBLIC_POSTHOG_KEY}
       NEXT_PUBLIC_POSTHOG_HOST: ${NEXT_PUBLIC_POSTHOG_HOST}
+      GMAIL_CLIENT_ID: ${GMAIL_CLIENT_ID}
+      GMAIL_CLIENT_SECRET: ${GMAIL_CLIENT_SECRET}
     depends_on:
       - api
 
